--- a/classroom-booking-frontend/public/index.html
+++ b/classroom-booking-frontend/public/index.html
@@ -25,6 +25,35 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      table {
+          width: 100%;
+          border-collapse: collapse;
+          margin-top: 20px;
+      }
+
+      th, td {
+          border: 1px solid #ddd;
+          padding: 10px;
+          text-align: left;
+      }
+
+      th {
+          background-color: #f2f2f2;
+      }
+
+      tr:hover {
+          background-color: #f5f5f5;
+      }
+
+      .book-now-btn {
+          padding: 8px 12px;
+          background-color: #4CAF50;
+          color: #fff;
+          border: none;
+          cursor: pointer;
+      }
+  </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +68,117 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <table>
+      <thead>
+          <tr>
+              <th>Space ID</th>
+              <th>Space Name</th>
+              <th>Status</th>
+              <th>Book Now</th>
+              <th>Duration</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td>1</td>
+              <td>calc 1</td>
+              <td>Available</td>
+              <td><button class="book-now-btn">Book Now</button></td>
+              <td>6:30-9:30</td>
+          </tr>
+          <tr>
+              <td>2</td>
+              <td>calc 2</td>
+              <td>Booked</td>
+              <td><button class="book-now-btn" disabled>Book Now</button></td>
+              <td>10:00-12:30</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>calc 3</td>
+            <td>Available</td>
+            <td><button class="book-now-btn">Book Now</button></td>
+            <td>8:30-10:30</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>calc 4</td>
+            <td>Booked</td>
+            <td><button class="book-now-btn" disabled>Book Now</button></td>
+            <td>6:30-7:30</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td> calc 5 </td>
+          <td>Available</td>
+          <td><button class="book-now-btn">Book Now</button></td>
+          <td>10:30-1:30</td>
+      </tr>
+      <tr>
+          <td>6</td>
+          <td>Nlt 1</td>
+          <td>Booked</td>
+          <td><button class="book-now-btn" disabled>Book Now</button></td>
+          <td>2:30-4:30</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>Nlt 2</td>
+        <td>Available</td>
+        <td><button class="book-now-btn">Book Now</button></td>
+        <td>4:30-6:30</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>Nlt 3</td>
+        <td>Booked</td>
+        <td><button class="book-now-btn" disabled>Book Now</button></td>
+        <td>1:30-3:30</td>
+    </tr>
+    <tr>
+      <td>9</td>
+      <td>Nlt 4</td>
+      <td>Available</td>
+      <td><button class="book-now-btn">Book Now</button></td>
+      <td>2:30-4:30</td>
+  </tr>
+  <tr>
+      <td>10</td>
+      <td>Nlt 5</td>
+      <td>Booked</td>
+      <td><button class="book-now-btn" disabled>Book Now</button></td>
+      <td>6:30-7:30</td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>Nlt 6</td>
+    <td>Available</td>
+    <td><button class="book-now-btn">Book Now</button></td>
+    <td>9:30-10:30</td>
+</tr>
+<tr>
+    <td>12</td>
+    <td>Nlt 7</td>
+    <td>Booked</td>
+    <td><button class="book-now-btn" disabled>Book Now</button></td>
+    <td>8:30-9:30</td>
+</tr>
+<tr>
+  <td>13</td>
+  <td>Nlt 8</td>
+  <td>Available</td>
+  <td><button class="book-now-btn">Book Now</button></td>
+  <td>5:30-6:30</td>
+</tr>
+<tr>
+  <td>14</td>
+  <td>Nlt 9</td>
+  <td>Booked</td>
+  <td><button class="book-now-btn" disabled>Book Now</button></td>
+  <td>1:30-4:30</td>
+</tr>
+          <!-- Add more rows as needed -->
+      </tbody>
+  </table>
   </body>
 </html>
